phi and gamma now display on refactored page - convert id to name, almost done

--- a/ms2ldaviz/templates/basicviz/show_doc_radu.html
+++ b/ms2ldaviz/templates/basicviz/show_doc_radu.html
@@ -220,7 +220,7 @@
                                 <td>{{ feature.intensity }}</td>
                                 <td>
                                     {% for m2minstance in m2minstances %}
-                                        {{ m2minstance.mass2motif }} ({{ m2minstance.probability|floatformat:"3"}})<br/>
+                                        {{ m2minstance.0 }} ({{ m2minstance.1|floatformat:"3"}})<br/>
                                     {% endfor %}
                                 </td>
                                 <td>
